<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTiga">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:padding="10px"
                android:text="@string/mk1" />

            <EditText
                android:id="@+id/nama_mk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk1_name"/>

            <EditText
                android:id="@+id/nilai_mk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk1_value"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:padding="10px"
                android:text="@string/mk2" />

            <EditText
                android:id="@+id/nama_mk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk2_name"/>

            <EditText
                android:id="@+id/nilai_mk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk2_value"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:padding="10px"
                android:text="@string/mk3" />

            <EditText
                android:id="@+id/nama_mk3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk3_name"/>

            <EditText
                android:id="@+id/nilai_mk3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk3_value"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:padding="10px"
                android:text="@string/mk4" />

            <EditText
                android:id="@+id/nama_mk4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk4_name"/>

            <EditText
                android:id="@+id/nilai_mk4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk4_value"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:padding="10px"
                android:text="@string/mk5" />

            <EditText
                android:id="@+id/nama_mk5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk5_name"/>

            <EditText
                android:id="@+id/nilai_mk5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/mk5_value"/>

            <Button
                android:id="@+id/btnProsesMk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_proses" />

            <TextView
                android:id="@+id/txt_hasil_proses_mk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_marginBottom="40dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>