<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dip"
    tools:context=".ActivityDua">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:text="@string/npm" />

    <EditText
        android:id="@+id/npm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:text="@string/nama" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:text="@string/jk" />

    <RadioGroup
        android:id="@+id/rb_group_jk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/r_laki_laki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laki_laki" />

        <RadioButton
            android:id="@+id/r_perempuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perempuan" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:text="@string/prodi" />

    <Spinner
        android:id="@+id/cmb_prodi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/daftar_prodi" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:text="@string/hobi" />

    <CheckBox
        android:id="@+id/hobi_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/membaca" />

    <CheckBox
        android:id="@+id/hobi_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/belajar" />

    <Button
        android:id="@+id/btn_proses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_proses" />



</LinearLayout>