<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    
    <Button
        android:id="@+id/tombol_satu"
        android:text="@string/tombol_satu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100pt"/>

    <Button
        android:id="@+id/tombol_activity_dua"
        android:text="@string/tombol_activity_dua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100pt"/>

    <Button
        android:id="@+id/tombol_activity_tiga"
        android:text="@string/tombol_activity_tiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100pt"/>

    <Button
        android:id="@+id/btn_activity_uts"
        android:text="@string/tombol_activity_uts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="100pt"/>

    <TextView
        android:id="@+id/text_satu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>